add interactive maps

--- a/econjobmarket/data_description_aa_dsouza.ipynb
+++ b/econjobmarket/data_description_aa_dsouza.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inst_data"
+    "inst_data #same as data ^"
    ]
   },
   {
@@ -232,11 +232,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Interactive Map - no arrows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.graph_objects as go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from_location_data = pd.DataFrame(inst_data.loc[:, [\"latitude\", \"longitude\", \"from_institution_name\", \"rank\"]])\n",
+    "to_location_data = pd.DataFrame(inst_data.loc[:, [\"to_latitude\", \"to_longitude\", \"to_name\", \"to_rank\"]])\n",
+    "location_data_1 = from_location_data.rename(columns = {\"from_institution_name\": \"institution_name\"})\n",
+    "location_data_2 = to_location_data.rename(columns = {\"to_latitude\": \"latitude\", \"to_longitude\": \"longitude\", \"to_name\": \"institution_name\", \"to_rank\": \"rank\"})\n",
+    "\n",
+    "location_data = pd.concat([location_data_1, location_data_2], ignore_index = True)\n",
+    "location_data = location_data.loc[:, [\"latitude\", \"longitude\", \"institution_name\", \"rank\"]]\n",
+    "location_data = location_data.drop_duplicates(ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.add_trace(go.Scattergeo(lon = location_data[\"longitude\"], lat = location_data[\"latitude\"], hoverinfo = \"text\", text = location_data.loc[:, [\"institution_name\", \"rank\"]], mode = \"markers\", marker = dict(size = 2, color = \"rgb(255, 0, 0)\", line = dict(width = 3, color = \"rgba(68, 68, 68, 0)\"))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in inst_data.index:\n",
+    "    fig.add_trace(go.Scattergeo(lon = [inst_data[\"longitude\"][i], inst_data[\"to_longitude\"][i]], lat = [inst_data[\"latitude\"][i], inst_data[\"to_latitude\"][i]], mode = \"lines\", line = dict(width = 1, color = \"red\")))\n",
+    "    \n",
+    "#opacity = float(df[\"count\"][i]) / float(df[\"count\"].max()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.update_layout(\n",
+    "    title_text = \"Interactive Map\", showlegend = False, geo = dict(projection_type = \"equirectangular\", showland = True, landcolor = \"rgb(243, 243, 243)\", countrycolor = \"rgb(204, 204, 204)\",))\n",
+    "\n",
+    "#to add markers https://plotly.com/python/marker-style/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ranking Scatterplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_clean_rank = data.dropna(subset = [\"rank\", \"to_rank\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize = (10, 10))\n",
+    "rank_scat = sns.regplot(x = \"rank\", y = \"to_rank\", data = data_clean_rank, ax = ax)\n",
+    "rank_scat.get_lines()[0].set_color(\"red\")"
+   ]
   }
  ],
  "metadata": {
