updated maps using annotation arrow proxy

--- a/econjobmarket/data_description_aa_dsouza.ipynb
+++ b/econjobmarket/data_description_aa_dsouza.ipynb
@@ -136,6 +136,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#note that points converging at Gulf of Guinea are at intersection of Equator and Prime Meridian\n",
+    "\n",
+    "#NaN probably coded as (0, 0) - dropped na above\n",
+    "\n",
+    "#FIXME some institutions such as IMF, CBO, BEA coded as (0, 0) for example uncomment and run the next line\n",
+    "#inst_data.loc[inst_data[\"to_latitude\"] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -154,12 +168,7 @@
     "    for i in data_subsets[j].index:\n",
     "        ax.scatter(inst_data.longitude[i], inst_data.latitude[i], transform = ccrs.Geodetic(), color = \"blue\", marker = \"o\") #use scatter point method from maps emailed\n",
     "        ax.plot([inst_data.longitude[i], inst_data.to_longitude[i]], [inst_data.latitude[i], inst_data.to_latitude[i]], transform=ccrs.Geodetic())\n",
-    "        ax.scatter(inst_data.to_longitude[i], inst_data.to_latitude[i], transform = ccrs.Geodetic(), color = \"red\", marker = \"^\") #use scatter point method from maps emailed, ideally cartopy adaptation of basemap https://stackoverflow.com/questions/45512429/python-basemap-drawgreatcircle-with-arrow-end-cap?rq=1\n",
-    "       \n",
-    "    \n",
-    "#note that points converging at Gulf of Guinea are at intersection of Equator and Prime Meridian\n",
-    "#therefore NaN probably coded as (0, 0) - dropped na\n",
-    "#FIXME some institutions such as IMF, CBO, BEA coded as (0, 0) inst_data.loc[inst_data[\"to_latitude\"] == 0]"
+    "        ax.scatter(inst_data.to_longitude[i], inst_data.to_latitude[i], transform = ccrs.Geodetic(), color = \"red\", marker = \"^\") #use scatter point method from maps emailed, ideally cartopy adaptation of basemap https://stackoverflow.com/questions/45512429/python-basemap-drawgreatcircle-with-arrow-end-cap?rq=1\n"
    ]
   },
   {
@@ -172,13 +181,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#with arrows but not great circle plot, also very messy\n",
+    "#with arrows but not great circle plot\n",
+    "\n",
+    "#FIXME need to work on colour using colormaps\n",
+    "\n",
     "for j in inst_data.category_id.unique():\n",
     "    fig = plt.figure(figsize=(25, 20))\n",
-    "    ax = fig.add_subplot(projection = ccrs.PlateCarree()) #Projection list: https://scitools.org.uk/cartopy/docs/latest/crs/projections.html\n",
+    "    ax = fig.add_subplot(projection = ccrs.Mercator()) #Projection list: https://scitools.org.uk/cartopy/docs/latest/crs/projections.html\n",
     "\n",
     "    ax.coastlines()\n",
     "    ax.add_feature(cfeature.OCEAN)\n",
@@ -187,8 +201,7 @@
     "    ax.set_title(\"category_id_\" + str(j) + \": \" + data_subsets[j].name.unique()[0])\n",
     "    transform = ccrs.PlateCarree()._as_mpl_transform(ax)\n",
     "    for i in data_subsets[j].index:\n",
-    "         ax.annotate('', xy=(inst_data.to_longitude[i], inst_data.to_latitude[i]), xytext=(inst_data.longitude[i], inst_data.latitude[i]), arrowprops=dict(arrowstyle=\"simple\", connectionstyle=\"arc3,rad=-0.2\", color = \"red\"), xycoords=transform, ha='right', va='top')\n",
-    "\n"
+    "        ax.annotate(\" \", xy = (inst_data.to_longitude[i], inst_data.to_latitude[i]), xytext = (inst_data.longitude[i], inst_data.latitude[i]), arrowprops = dict(arrowstyle = \"->\", connectionstyle=\"arc3, rad = -0.8\", color = \"red\"), xycoords = transform, ha = 'right', va = 'top', annotation_clip = False)\n"
    ]
   },
   {
